--- a/FeatureSelection2.ipynb
+++ b/FeatureSelection2.ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "name": "FeatureSelection2.ipynb",
-      "provenance": [],
       "private_outputs": true,
+      "provenance": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,9 +28,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wTLphyOw0wpZ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "wTLphyOw0wpZ"
       },
       "source": [
         "# Clone the entire repo.\n",
@@ -44,9 +42,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZlFd8CWKzRBO",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ZlFd8CWKzRBO"
       },
       "source": [
         "import numpy as np # linear algebra\n",
@@ -71,11 +67,7 @@
         "from sklearn.feature_selection import SelectFromModel\n",
         "from sklearn.feature_selection import SelectKBest\n",
         "from sklearn.feature_selection import chi2\n",
-        "from sklearn.linear_model import LassoCV\n",
-        "\n",
-        "#for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-        "#    for filename in filenames:\n",
-        "#        print(os.path.join(dirname, filename))"
+        "from sklearn.linear_model import LassoCV"
       ],
       "execution_count": null,
       "outputs": []
@@ -83,8 +75,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3NVdjjRJ-q6q",
-        "colab_type": "text"
+        "id": "3NVdjjRJ-q6q"
       },
       "source": [
         "# **Get and prepare the data**"
@@ -93,10 +84,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hC8hmMo6-4rf",
-        "colab_type": "text"
+        "id": "hC8hmMo6-4rf"
       },
       "source": [
+        "This notebook uses a mushroom data set. <br>\n",
+        "It has 8124 rows and 23 categorical columns<br>\n",
+        "\n",
         "p = poisonous<br>\n",
         "e = edible\n"
       ]
@@ -104,9 +97,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "X1ONl-APzeRD",
-        "colab_type": "code",
-        "colab": {}
+        "id": "X1ONl-APzeRD"
       },
       "source": [
         "df = pd.read_csv('datasets_478_974_mushrooms.csv')\n",
@@ -119,9 +110,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pROWVoXd1Isi",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pROWVoXd1Isi"
       },
       "source": [
         "percent_missing = df.isnull().sum() * 100 / len(df)\n",
@@ -134,9 +123,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aQbun-ti1ORO",
-        "colab_type": "code",
-        "colab": {}
+        "id": "aQbun-ti1ORO"
       },
       "source": [
         "sns.set(style=\"ticks\")\n",
@@ -149,9 +136,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jTuw3WT91SyP",
-        "colab_type": "code",
-        "colab": {}
+        "id": "jTuw3WT91SyP"
       },
       "source": [
         "df['class'].value_counts()"
@@ -162,9 +147,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dzkEFwnU1Ued",
-        "colab_type": "code",
-        "colab": {}
+        "id": "dzkEFwnU1Ued"
       },
       "source": [
         "df.shape"
@@ -175,9 +158,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vzUqF2Bh1vR6",
-        "colab_type": "code",
-        "colab": {}
+        "id": "vzUqF2Bh1vR6"
       },
       "source": [
         "X = df.drop(['class'], axis = 1)\n",
@@ -189,8 +170,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6Tpkn1wYA8fn",
-        "colab_type": "text"
+        "id": "6Tpkn1wYA8fn"
       },
       "source": [
         "**Convert data from categorical data to one-hot**"
@@ -199,9 +179,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hNZAYBtE1xkn",
-        "colab_type": "code",
-        "colab": {}
+        "id": "hNZAYBtE1xkn"
       },
       "source": [
         "X = pd.get_dummies(X, prefix_sep='_')\n",
@@ -213,8 +191,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "b-jIB9qABKTj",
-        "colab_type": "text"
+        "id": "b-jIB9qABKTj"
       },
       "source": [
         "Changing to one-hot means many more columns. <br>\n",
@@ -224,9 +201,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5bLi8GYRBEZN",
-        "colab_type": "code",
-        "colab": {}
+        "id": "5bLi8GYRBEZN"
       },
       "source": [
         "X.shape"
@@ -237,8 +212,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "P7ri6RGnBY8_",
-        "colab_type": "text"
+        "id": "P7ri6RGnBY8_"
       },
       "source": [
         "Change the classes from <br>\n",
@@ -249,9 +223,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VMNYOwbt14_n",
-        "colab_type": "code",
-        "colab": {}
+        "id": "VMNYOwbt14_n"
       },
       "source": [
         "Y = LabelEncoder().fit_transform(Y)\n",
@@ -264,8 +236,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RQEyyrz2B_nQ",
-        "colab_type": "text"
+        "id": "RQEyyrz2B_nQ"
       },
       "source": [
         "Standarize the data<br>\n",
@@ -275,9 +246,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AjHzf7Op18Vj",
-        "colab_type": "code",
-        "colab": {}
+        "id": "AjHzf7Op18Vj"
       },
       "source": [
         "X2 = StandardScaler().fit_transform(X)\n",
@@ -290,8 +259,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rLquqe32CSTe",
-        "colab_type": "text"
+        "id": "rLquqe32CSTe"
       },
       "source": [
         "# **Create and train a logistic regression model**"
@@ -300,9 +268,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b9glUpK21-7J",
-        "colab_type": "code",
-        "colab": {}
+        "id": "b9glUpK21-7J"
       },
       "source": [
         "start = time.process_time()\n",
@@ -318,8 +284,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GQAGlhn7Cn2k",
-        "colab_type": "text"
+        "id": "GQAGlhn7Cn2k"
       },
       "source": [
         "# **Create and train a support vector model**"
@@ -328,9 +293,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Hb3PfFmj2BbZ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Hb3PfFmj2BbZ"
       },
       "source": [
         "start = time.process_time()\n",
@@ -346,8 +309,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kWJmKVEMFH5K",
-        "colab_type": "text"
+        "id": "kWJmKVEMFH5K"
       },
       "source": [
         "# **Create and train a decision tree model**"
@@ -356,8 +318,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DbQpJH6UUEYY",
-        "colab_type": "text"
+        "id": "DbQpJH6UUEYY"
       },
       "source": [
         "Decision Trees models which are based on ensembles (eg. Extra Trees and Random Forest) can be used to rank the importance of the different features. Knowing which features our model is giving most importance can be of vital importance to understand how our model is making it’s predictions (therefore making it more explainable). At the same time, we can get rid of the features which do not bring any benefit to our model (or confuse it to make a wrong decision!)."
@@ -366,9 +327,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Sy0WgQtP2D6F",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Sy0WgQtP2D6F"
       },
       "source": [
         "start = time.process_time()\n",
@@ -384,8 +343,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YbhLPE31QVpw",
-        "colab_type": "text"
+        "id": "YbhLPE31QVpw"
       },
       "source": [
         "Show the decision tree"
@@ -394,9 +352,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_YIJFOdm2Gy_",
-        "colab_type": "code",
-        "colab": {}
+        "id": "_YIJFOdm2Gy_"
       },
       "source": [
         "import graphviz\n",
@@ -416,8 +372,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "njyQYN2F2NX3",
-        "colab_type": "text"
+        "id": "njyQYN2F2NX3"
       },
       "source": [
         "# **Feature importance**"
@@ -426,8 +381,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DUCln3zCQhB_",
-        "colab_type": "text"
+        "id": "DUCln3zCQhB_"
       },
       "source": [
         "Train a Random Forest Classifier"
@@ -436,9 +390,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y9sI6-zw2Nju",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Y9sI6-zw2Nju"
       },
       "source": [
         "start = time.process_time()\n",
@@ -454,8 +406,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "u_n-Mh5zUVTH",
-        "colab_type": "text"
+        "id": "u_n-Mh5zUVTH"
       },
       "source": [
         "# Use the trained forest to create **Feature Importance Plot**"
@@ -464,9 +415,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "I1erji4j2Tce",
-        "colab_type": "code",
-        "colab": {}
+        "id": "I1erji4j2Tce"
       },
       "source": [
         "figure(num=None, figsize=(20, 22), dpi=80, facecolor='w', edgecolor='k')\n",
@@ -480,8 +429,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "v_2Ou3ChWNUv",
-        "colab_type": "text"
+        "id": "v_2Ou3ChWNUv"
       },
       "source": [
         "**Using the top 4 most important features, retrain the model.**"
@@ -490,9 +438,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nz2ru9-G2W-l",
-        "colab_type": "code",
-        "colab": {}
+        "id": "nz2ru9-G2W-l"
       },
       "source": [
         "X_Reduced = X[['odor_n','odor_f', 'gill-size_n','gill-size_b']]\n",
@@ -505,8 +451,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Kon8T6JxWm_b",
-        "colab_type": "text"
+        "id": "Kon8T6JxWm_b"
       },
       "source": [
         "**Retrain the Random Forest model with the top most important features**"
@@ -515,8 +460,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "uh0BS3hlW3d2",
-        "colab_type": "text"
+        "id": "uh0BS3hlW3d2"
       },
       "source": [
         "Reducing the number of features, the model loses .04% in precision. <br>\n",
@@ -526,9 +470,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oJvw1UMA2Zko",
-        "colab_type": "code",
-        "colab": {}
+        "id": "oJvw1UMA2Zko"
       },
       "source": [
         "start = time.process_time()\n",
@@ -544,8 +486,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6FqYTqtb2cQj",
-        "colab_type": "text"
+        "id": "6FqYTqtb2cQj"
       },
       "source": [
         "**Perform Feature Selection by visualizing a trained Decision Tree structure**"
@@ -554,9 +495,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WPRlnxjF2cZA",
-        "colab_type": "code",
-        "colab": {}
+        "id": "WPRlnxjF2cZA"
       },
       "source": [
         "from sklearn.feature_selection import RFE\n",
@@ -576,9 +515,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "88y1xbjJ2i3L",
-        "colab_type": "code",
-        "colab": {}
+        "id": "88y1xbjJ2i3L"
       },
       "source": [
         "model = RandomForestClassifier(n_estimators=700)\n",
@@ -596,8 +533,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OwWgqZae2mza",
-        "colab_type": "text"
+        "id": "OwWgqZae2mza"
       },
       "source": [
         "**SelectFromModel**: Meta-transformer for selecting features based on importance weights."
@@ -606,9 +542,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T5UDdZLA2qS9",
-        "colab_type": "code",
-        "colab": {}
+        "id": "T5UDdZLA2qS9"
       },
       "source": [
         "model = ExtraTreesClassifier()\n",
@@ -625,9 +559,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0JD9dZ2t4JWw",
-        "colab_type": "code",
-        "colab": {}
+        "id": "0JD9dZ2t4JWw"
       },
       "source": [
         "start = time.process_time()\n",
@@ -644,9 +576,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0yOiXa2W4N_g",
-        "colab_type": "code",
-        "colab": {}
+        "id": "0yOiXa2W4N_g"
       },
       "source": [
         "# https://scikit-learn.org/stable/auto_examples/ensemble/plot_forest_importances.html\n",
@@ -676,19 +606,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ueWcuxbg4RDR",
-        "colab_type": "text"
+        "id": "ueWcuxbg4RDR"
       },
       "source": [
-        "# **Correlation matrix analysis**"
+        "# **Correlation matrix analysis**\n",
+        "A correlation matrix is a table showing correlation coefficients between variables. Each cell in the table shows the correlation between two variables.\n",
+        "<br><br>\n",
+        "Most correlation matrixes use Pearson’s Product-Moment Correlation (r). It is also common to use Spearman’s Correlation and Kendall’s Tau-b."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6jjd9zMY4UP2",
-        "colab_type": "code",
-        "colab": {}
+        "id": "6jjd9zMY4UP2"
       },
       "source": [
         "Numeric_df = pd.DataFrame(X)\n",
@@ -701,9 +631,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-264YQG84W4j",
-        "colab_type": "code",
-        "colab": {}
+        "id": "-264YQG84W4j"
       },
       "source": [
         "figure(num=None, figsize=(12, 10), dpi=80, facecolor='w', edgecolor='k')\n",
@@ -715,11 +643,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TVGdv5P4rKO0"
+      },
+      "source": [
+        "Decide your correlation threshold and select only those features with correlations above the threshold."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "6JDz-f43xV1Q",
-        "colab_type": "code",
-        "colab": {}
+        "id": "6JDz-f43xV1Q"
       },
       "source": [
         "# Selecting only correlated features\n",
@@ -733,12 +668,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eFsCAWHN4Zon",
-        "colab_type": "code",
-        "colab": {}
+        "id": "eFsCAWHN4Zon"
       },
       "source": [
-        "X_Reduced2 = X[['bruises_f' , 'bruises_t' , 'gill-color_b' , 'gill-size_b' , 'gill-size_n' , 'ring-type_p' , 'stalk-surface-below-ring_k' , 'stalk-surface-above-ring_k' , \n",
+        "X_Reduced2 = X[['bruises_f' , 'bruises_t' , 'gill-color_b' , 'gill-size_b' , \n",
+        "                'gill-size_n' , 'ring-type_p' , 'stalk-surface-below-ring_k' , \n",
+        "                'stalk-surface-above-ring_k' , \n",
         "                'odor_f', 'odor_n']]\n",
         "X_Reduced2 = StandardScaler().fit_transform(X_Reduced2)\n",
         "X_Train3, X_Test3, Y_Train3, Y_Test3 = train_test_split(X_Reduced2, Y, test_size = 0.30, random_state = 101)"
@@ -749,9 +684,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PUPu0ZUG4cfe",
-        "colab_type": "code",
-        "colab": {}
+        "id": "PUPu0ZUG4cfe"
       },
       "source": [
         "start = time.process_time()\n",
@@ -767,8 +700,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dUgmtXjn-FPj",
-        "colab_type": "text"
+        "id": "dUgmtXjn-FPj"
       },
       "source": [
         "**Univariate Feature Selection**"
@@ -777,9 +709,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9Cux37n3-JAN",
-        "colab_type": "code",
-        "colab": {}
+        "id": "9Cux37n3-JAN"
       },
       "source": [
         "min_max_scaler = preprocessing.MinMaxScaler()\n",
@@ -791,9 +721,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CDAtRODx-Mox",
-        "colab_type": "code",
-        "colab": {}
+        "id": "CDAtRODx-Mox"
       },
       "source": [
         "X_new = SelectKBest(chi2, k=2).fit_transform(Scaled_X, Y)\n",
@@ -811,8 +739,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Kndv_k24-Ofa",
-        "colab_type": "text"
+        "id": "Kndv_k24-Ofa"
       },
       "source": [
         "# **Lasso Regression**"
@@ -821,9 +748,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xPcYgfQc-Rum",
-        "colab_type": "code",
-        "colab": {}
+        "id": "xPcYgfQc-Rum"
       },
       "source": [
         "regr = LassoCV(cv=5, random_state=101)\n",
@@ -840,9 +765,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KeK2liia-UOR",
-        "colab_type": "code",
-        "colab": {}
+        "id": "KeK2liia-UOR"
       },
       "source": [
         "figure(num=None, figsize=(12, 10), dpi=80, facecolor='w', edgecolor='k')\n",
