--- a/IntroToClassification.ipynb
+++ b/IntroToClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "IntroToClassification.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNujnWC/ad8aNUhHooCKQ8t",
+      "authorship_tag": "ABX9TyMNRyNpGgk4cATAgHj2U33U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,11 +90,11 @@
       },
       "source": [
         "**Lazy Learners**\n",
-        "As the name suggests, such kind of learners waits for the testing data to appear after storing the training data. Classification is done only after getting the testing data. They spend less time on training but more time on predicting. <br>\n",
+        "As the name suggests, these learners wait for the testing data to appear after storing the training data. Classification is done only after getting the testing data. They spend less time on training but more time on predicting. <br>\n",
         "Examples of lazy learners are K-nearest neighbor and case-based reasoning.<br><BR>\n",
         "\n",
         "**Eager Learners**\n",
-        "As opposite to lazy learners, eager learners construct classification model without waiting for the testing data to be appeared after storing the training data. They spend more time on training but less time on predicting. <br>\n",
+        "Opposite to lazy learners, eager learners construct classification model without waiting for the testing data. They spend more time on training but less time on predicting. <br>\n",
         "Examples of eager learners are Decision Trees, Naïve Bayes and Artificial Neural Networks (ANN)."
       ]
     },
