--- a/NaiveBayesGaussian_1.ipynb
+++ b/NaiveBayesGaussian_1.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesGaussian 1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNNU7/tHa2QK/iKfx00JDt7",
+      "authorship_tag": "ABX9TyPXviyJrhAbZPon3hkJwbC2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -124,7 +124,7 @@
         "id": "b7Uf0WxFnazI"
       },
       "source": [
-        "!pip install -U matplotlib"
+        "#!pip install -U matplotlib"
       ],
       "execution_count": null,
       "outputs": []
@@ -136,12 +136,7 @@
       },
       "source": [
         "from sklearn.datasets import make_classification\n",
-        "from sklearn.naive_bayes import MultinomialNB\n",
-        "from sklearn.datasets import load_digits\n",
-        "from sklearn.model_selection import cross_val_score\n",
         "from sklearn.naive_bayes import GaussianNB\n",
-        "from sklearn.linear_model import LogisticRegression \n",
-        "from sklearn.metrics import roc_curve, auc\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "import numpy as np\n",
@@ -149,8 +144,8 @@
         "#import matplotlib.pyplot as plty\n",
         "\n",
         "from sklearn.datasets import make_blobs\n",
-        "!pip uninstall matplotlib\n",
-        "!pip install matplotlib==3.1.3\n",
+        "#!pip uninstall matplotlib\n",
+        "#!pip install matplotlib==3.1.3\n",
         "import matplotlib.pyplot as plt"
       ],
       "execution_count": null,
@@ -171,7 +166,8 @@
         "id": "4NUdEkLTigSJ"
       },
       "source": [
-        "X, y = make_blobs(2000, 2, centers=2, random_state=2, cluster_std=1.5)\n",
+        "#X, y = make_blobs(2000, 4, centers=2, random_state=2, cluster_std=1.5)\n",
+        "X,y = make_blobs(500,2,centers=2)\n",
         "plt.scatter(X[:, 0], X[:, 1])\n",
         "plt.show()"
       ],
@@ -253,18 +249,6 @@
         "plt.colorbar(fig)\n",
         "plt.plot(X_test[:,0],ypredClass,'r+')\n",
         "plt.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qf-DLv1vhXds"
-      },
-      "source": [
-        "digits = load_digits()\n",
-        "print(cross_val_score(model, digits.data, digits.target, scoring='accuracy', cv=10).mean())"
       ],
       "execution_count": null,
       "outputs": []
