--- a/NaiveBayesGaussian_1.ipynb
+++ b/NaiveBayesGaussian_1.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesGaussian 1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPXviyJrhAbZPon3hkJwbC2",
+      "authorship_tag": "ABX9TyPZp5U9wiVseeEwhAKmg4cz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -136,7 +136,12 @@
       },
       "source": [
         "from sklearn.datasets import make_classification\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "from sklearn.datasets import load_digits\n",
+        "from sklearn.model_selection import cross_val_score\n",
         "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.linear_model import LogisticRegression \n",
+        "from sklearn.metrics import roc_curve, auc\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "import numpy as np\n",
@@ -145,7 +150,8 @@
         "\n",
         "from sklearn.datasets import make_blobs\n",
         "#!pip uninstall matplotlib\n",
-        "#!pip install matplotlib==3.1.3\n",
+        "#y\n",
+        "!pip install matplotlib==3.1.3\n",
         "import matplotlib.pyplot as plt"
       ],
       "execution_count": null,
@@ -166,8 +172,7 @@
         "id": "4NUdEkLTigSJ"
       },
       "source": [
-        "#X, y = make_blobs(2000, 4, centers=2, random_state=2, cluster_std=1.5)\n",
-        "X,y = make_blobs(500,2,centers=2)\n",
+        "X, y = make_blobs(2000, 2, centers=2, random_state=2, cluster_std=1.5)\n",
         "plt.scatter(X[:, 0], X[:, 1])\n",
         "plt.show()"
       ],
