--- a/NaiveBayesGaussian_1.ipynb
+++ b/NaiveBayesGaussian_1.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesGaussian 1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPZp5U9wiVseeEwhAKmg4cz",
+      "authorship_tag": "ABX9TyOYqyneKwRqaBoPcQhZ+VvB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -236,7 +236,29 @@
       "source": [
         "ypred = model.predict_proba(X_test)\n",
         "ypredClass = ypred.round()\n",
-        "print(ypredClass)"
+        "#print(ypredClass)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XZFo0--MLYV3"
+      },
+      "source": [
+        "model.score(X,y)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HecblgCrLk62"
+      },
+      "source": [
+        "model.score(X_test,y_test)"
       ],
       "execution_count": null,
       "outputs": []
