--- a/NaiveBayesGaussian_1.ipynb
+++ b/NaiveBayesGaussian_1.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesGaussian 1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOYqyneKwRqaBoPcQhZ+VvB",
+      "authorship_tag": "ABX9TyOrCaXBVcBGFWMd75r+3eZl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,7 +106,16 @@
       },
       "source": [
         "Gaussian Naïve Bayes\n",
-        "It is the simplest Naïve Bayes classifier having the assumption that the data from each label is drawn from a simple Gaussian distribution."
+        "It **is the simplest Naïve Bayes classifier** having the assumption that the data from each label is drawn from a simple Gaussian distribution."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JCBaqWODMm-x"
+      },
+      "source": [
+        "https://machinelearningmastery.com/naive-bayes-for-machine-learning/\n"
       ]
     },
     {
@@ -143,6 +152,7 @@
         "from sklearn.linear_model import LogisticRegression \n",
         "from sklearn.metrics import roc_curve, auc\n",
         "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import confusion_matrix\n",
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -167,12 +177,40 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ijf9m51NQDBr"
+      },
+      "source": [
+        "**make_blobs and make_classification** create multiclass datasets by allocating each class one or more normally-distributed clusters of points.<br><br>\n",
+        "\n",
+        "make_blobs provides:<br>\n",
+        "- greater control regarding the centers and standard deviations of each cluster<br>\n",
+        "- is used to demonstrate clustering.<br><br>\n",
+        "\n",
+        "make_classification specialises in introducing noise by way of:<br>\n",
+        "- correlated, redundant and uninformative features; <br>- multiple Gaussian clusters per class<br>\n",
+        "- linear transformations of the feature space."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3ov7KPQsNA6_"
+      },
+      "source": [
+        "X,y = make_classification(n_samples=100, n_features=10,n_classes=3,class_sep=1.0,n_clusters_per_class=1)\n",
+        "#X, y = make_blobs(2000, 2, centers=2, random_state=2, cluster_std=1.5)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "4NUdEkLTigSJ"
       },
       "source": [
-        "X, y = make_blobs(2000, 2, centers=2, random_state=2, cluster_std=1.5)\n",
         "plt.scatter(X[:, 0], X[:, 1])\n",
         "plt.show()"
       ],
@@ -244,17 +282,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XZFo0--MLYV3"
-      },
-      "source": [
-        "model.score(X,y)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "HecblgCrLk62"
       },
       "source": [
@@ -279,6 +306,19 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Is0meUzlMuc-"
+      },
+      "source": [
+        "Assignment<br>\n",
+        "Change the dataset:<br>\n",
+        ">fewer data instances<br>\n",
+        ">more data instances<br>\n",
+        ">number of clusters<br>"
+      ]
     }
   ]
 }
