--- a/NaiveBayesGaussian2.ipynb
+++ b/NaiveBayesGaussian2.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "name": "NaiveBayesGaussian2.ipynb",
-      "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNHE38qmBj3YVcVS4pq+A3y",
+      "provenance": [],
+      "authorship_tag": "ABX9TyM4CkNZgcD6Su4Ng7LrAvxq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,8 +28,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OKZnrZzI3hYX",
-        "colab_type": "text"
+        "id": "OKZnrZzI3hYX"
       },
       "source": [
         "Load the data"
@@ -38,24 +37,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UH7U2eSTgUH1",
-        "colab_type": "code",
-        "colab": {}
+        "id": "UH7U2eSTgUH1"
       },
       "source": [
         "# load the iris dataset \n",
         "from sklearn.datasets import load_iris \n",
         "iris = load_iris() "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Vlk5y1jh3-_T",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Vlk5y1jh3-_T"
       },
       "source": [
         "from sklearn.datasets import make_classification\n",
@@ -64,14 +59,13 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn.naive_bayes import GaussianNB "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "510xI-G_YqoI",
-        "colab_type": "text"
+        "id": "510xI-G_YqoI"
       },
       "source": [
         "We are using the Iris dataset.<br>\n",
@@ -82,51 +76,44 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "p_SmsQa12qPs",
-        "colab_type": "code",
-        "colab": {}
+        "id": "p_SmsQa12qPs"
       },
       "source": [
         "# store the feature matrix (X) and label (y) \n",
         "X = iris.data \n",
         "y = iris.target "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Z-hNpHR6ZFia",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Z-hNpHR6ZFia"
       },
       "source": [
         "y.shape\n",
         "y.view()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KVqtxaW04P3B",
-        "colab_type": "code",
-        "colab": {}
+        "id": "KVqtxaW04P3B"
       },
       "source": [
-        "X.shape\n",
+        "print(X.shape)\n",
         "X.view()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GHozZuaI3pBk",
-        "colab_type": "text"
+        "id": "GHozZuaI3pBk"
       },
       "source": [
         "Split the data into training and test data"
@@ -135,22 +122,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Of2YiEy6gaHM",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Of2YiEy6gaHM"
       },
       "source": [
         "# splitting X and y into training and testing sets \n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1) "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8xf67IitAovp",
-        "colab_type": "text"
+        "id": "8xf67IitAovp"
       },
       "source": [
         "Plot the data, there are 3 classes of the irises"
@@ -159,9 +143,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8xbEH9e635lJ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "8xbEH9e635lJ"
       },
       "source": [
         "plt.figure(figsize=(10,5))\n",
@@ -171,14 +153,13 @@
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "BR_ESJUd3t1u",
-        "colab_type": "text"
+        "id": "BR_ESJUd3t1u"
       },
       "source": [
         "Create and train the model on the training data"
@@ -187,51 +168,43 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "69NGmk2jgc7Q",
-        "colab_type": "code",
-        "colab": {}
+        "id": "69NGmk2jgc7Q"
       },
       "source": [
         "# training the model on training set \n",
         "gnb = GaussianNB() \n",
         "gnb.fit(X_train, y_train) "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LDTz61EUgfEo",
-        "colab_type": "code",
-        "colab": {}
+        "id": "LDTz61EUgfEo"
       },
       "source": [
         "# making predictions on the testing set \n",
         "y_pred = gnb.predict(X_test) "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CmmgdVjUAwbh",
-        "colab_type": "code",
-        "colab": {}
+        "id": "CmmgdVjUAwbh"
       },
       "source": [
         "y_pred.view()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ysIzjDigA05a",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ysIzjDigA05a"
       },
       "source": [
         "plt.figure(figsize=(10,5))\n",
@@ -242,22 +215,20 @@
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MssAWcOVgif7",
-        "colab_type": "code",
-        "colab": {}
+        "id": "MssAWcOVgif7"
       },
       "source": [
         "_# comparing actual response values (y_test) with predicted response values (y_pred) \n",
         "from sklearn import metrics \n",
         "print(\"Gaussian Naive Bayes model accuracy(in %):\", metrics.accuracy_score(y_test, y_pred)*100)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
