--- a/DecisionTrees.ipynb
+++ b/DecisionTrees.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPhPrmC9Q0+mi9nynTSMXEX",
+      "authorship_tag": "ABX9TyMqRroOxho3XKW6bEkBvDKC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,11 +31,51 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "R9aOQHn5Z6Ok"
+        "id": "psT1lRjDZ7ym"
       },
       "source": [
-        "https://www.upgrad.com/blog/pros-and-cons-of-decision-tree-regression-in-machine-learning/\n"
+        "A decision tree has branches, nodes, leaves, etc. <br>\n",
+        "\n",
+        "A root node is an initial node representing the entire sample or population, and it can get further divided into other nodes or homogeneous sets. <br>\n",
+        "\n",
+        "A decision node consists of two or more nodes that represent separate values of the attribute tested.\n",
+        "\n",
+        "**A leaf/terminal node does not split into further nodes, and it represents a decision**"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BuSrPmohbvHu"
+      },
+      "source": [
+        "Image(\"/content/cloned-repo/images/Decision Tree.png\" , width=640)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sZ--zXXnbI4e"
+      },
+      "source": [
+        "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
+        "%cd cloned-repo"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E4coQdmHbq3T"
+      },
+      "source": [
+        "from IPython.display import Image"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -44,10 +84,21 @@
       },
       "source": [
         "from sklearn import tree\n",
-        "X = [[0, 0], [1, 1]]\n",
-        "Y = [0, 1]\n",
+        "X = [[0,0,0], [1,1,1],[1,0,1],[0,1,1],[0,0,1],[0,1,0],[0,1,0]]\n",
+        "Y = [0, 1, 0,1,0,1,1,0]\n",
         "clf = tree.DecisionTreeClassifier()\n",
         "clf = clf.fit(X, Y)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gisQvhk2ciER"
+      },
+      "source": [
+        "tree.plot_tree(clf)"
       ],
       "execution_count": null,
       "outputs": []
@@ -58,10 +109,23 @@
         "id": "hrE_jIcWVjmu"
       },
       "source": [
-        "clf.predict([[2., 2.]])"
+        "clf.predict([[1,0,0]])"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N0Y3HeiJe_Ho"
+      },
+      "source": [
+        "predict_prob is a function that predicts class probabilities of the input samples X.\n",
+        "\n",
+        "The predicted class probability is the fraction of samples of the same\n",
+        "class in a leaf.\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -69,10 +133,53 @@
         "id": "JqDTckZcVpt1"
       },
       "source": [
-        "clf.predict_proba([[2., 2.]])"
+        "clf.predict_proba([[1,0,0]])\n",
+        "clf.predict_proba()"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uwIZP4wVfuwJ"
+      },
+      "source": [
+        "**Advantages of Decision Tree Algorithm:**<br>\n",
+        "\n",
+        "- Understanding the results is easier than other models. You can have the technical team program your decision tree model, so it works faster, and you can apply it to new instances. Its calculations have inclusion tests according to an instance, which is a qualitative or a quantitative model.<br>\n",
+        "\n",
+        "- It is non-parametric. The independent variables present in our problem don’t have to follow any specific probability distributions due to this reason. You can have collinear variables. Whether they are discriminating or not, it doesn’t have an impact on your decision tree because it doesn’t have to choose those variables.<br>\n",
+        "\n",
+        "- They are capable of working with missing values. CHAID puts all the missing values in a category, which you can merge with another one or keep separate from others.<br>\n",
+        "\n",
+        "- Extreme individual values (such as outliers) don’t have much effect on the decision trees. You can isolate them in small nodes so that they don’t affect the entire classification.<br>\n",
+        "\n",
+        "- It gives you a great visual representation of a decision-making process. Every branch of a decision tree stands for the factors that can affect your decisions, and you get to see a bigger picture. You can use decision trees to improve communication in your team. <br>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j_B0chNtf8WV"
+      },
+      "source": [
+        "**Disadvantages of Decision Tree Algorithm**<br>\n",
+        "- It doesn’t analyze all the independent variables simultaneously. Instead, it evaluates them sequentially. Due to this, the tree never revises the division of a node at any level, which can cause bias in the tree’s choices. <br>\n",
+        "\n",
+        "- Modifying even a single variable can affect the entire tree if it’s close to the top. There are ways to solve this problem. For example, you can construct the tree on multiple samples and aggregate them according to a mean (or vote); this is called resampling. However, it leads to another set of problems as it reduces the readability of the model by making it more complex. So, through resampling, you can get rid of the best qualities of decision trees. Why is it a problem? Suppose one variable has all the qualities of a particular group, but it also has the quality according to which the tree splits. In this case, the tree would put it in the wrong class just because it has that important quality. <br>\n",
+        "\n",
+        "- All the nodes of a specific level in a decision tree depend on the nodes in their previous levels. In other words, how you define the nodes on level ‘n +1’ depends entirely on your definition for the nodes on the level ‘n.’ If your definition at level ‘n’ is wrong, all the subsequent levels and the nodes present in those levels would also be wrong\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nyWRtOuuZiqv"
+      },
+      "source": [
+        "**Decision Tree Classifier on the Iris Dataset**"
+      ]
     },
     {
       "cell_type": "code",
