--- a/DecisionTrees.ipynb
+++ b/DecisionTrees.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMqRroOxho3XKW6bEkBvDKC",
+      "authorship_tag": "ABX9TyM9Ea5v3yef+4EJM6jnwNze",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,29 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/DecisionTrees.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E4coQdmHbq3T"
+      },
+      "source": [
+        "from IPython.display import Image"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sZ--zXXnbI4e"
+      },
+      "source": [
+        "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
+        "%cd cloned-repo"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -57,22 +80,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sZ--zXXnbI4e"
+        "id": "_wSfleyXiADq"
       },
       "source": [
-        "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
-        "%cd cloned-repo"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "E4coQdmHbq3T"
-      },
-      "source": [
-        "from IPython.display import Image"
+        "Image(\"images/Decision Tree 2.png\" , width=640)"
       ],
       "execution_count": null,
       "outputs": []
@@ -249,15 +260,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "o0YxCZzPa4Fw"
-      },
-      "source": [
-        "https://www.upgrad.com/blog/\n"
-      ]
     }
   ]
 }
