--- a/DecisionTrees.ipynb
+++ b/DecisionTrees.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM9Ea5v3yef+4EJM6jnwNze",
+      "authorship_tag": "ABX9TyNj2xC2KhixKWUAqmMDAxOM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,7 @@
       "source": [
         "from sklearn import tree\n",
         "X = [[0,0,0], [1,1,1],[1,0,1],[0,1,1],[0,0,1],[0,1,0],[0,1,0]]\n",
-        "Y = [0, 1, 0,1,0,1,1,0]\n",
+        "Y = [0, 1, 0,1,0,1,1]\n",
         "clf = tree.DecisionTreeClassifier()\n",
         "clf = clf.fit(X, Y)"
       ],
@@ -145,7 +145,7 @@
       },
       "source": [
         "clf.predict_proba([[1,0,0]])\n",
-        "clf.predict_proba()"
+        "clf.predict_proba(X)"
       ],
       "execution_count": null,
       "outputs": []
@@ -257,6 +257,213 @@
         "                     special_characters=True)  \n",
         "graph = graphviz.Source(dot_data)  \n",
         "graph "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "V9sYJ8eCjIfw"
+      },
+      "source": [
+        "**Decision Tree Classifier on the Diabetes Dataset**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ylAON1s9j2TR"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.tree import DecisionTreeClassifier # Import Decision Tree Classifier\n",
+        "from sklearn.model_selection import train_test_split # Import train_test_split function\n",
+        "from sklearn import metrics #Import scikit-learn metrics module for accuracy calculation"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GK1RRyr5jVjh"
+      },
+      "source": [
+        "col_names = ['pregnancies', 'glucose', 'bp', 'skin', 'insulin', 'bmi', 'pedigree', 'age', 'label']\n",
+        "# load dataset\n",
+        "diabetes= pd.read_csv(\"pima_indians_diabetes.csv\", header=None, names=col_names)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5bu-bgSckE7a"
+      },
+      "source": [
+        "diabetes.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ChbTGrI-k4zd"
+      },
+      "source": [
+        "diabetes = diabetes.drop([0])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qh2ce8LJkP4-"
+      },
+      "source": [
+        "#split dataset in features and target variable\n",
+        "feature_cols = ['pregnancies', 'insulin', 'bmi', 'age','glucose','bp','pedigree']\n",
+        "X = diabetes[feature_cols] # Features\n",
+        "y = diabetes.label # Target variable"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F7qQHLj3kXIr"
+      },
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8E-jSDs3kaW-"
+      },
+      "source": [
+        "# Create Decision Tree classifer object\n",
+        "diabetes_clf = DecisionTreeClassifier()\n",
+        "\n",
+        "# Train Decision Tree Classifer\n",
+        "diabetes_clf = clf.fit(X_train,y_train)\n",
+        "\n",
+        "#Predict the response for test dataset\n",
+        "y_pred = diabetes_clf.predict(X_test)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "01KT3ZU8lWTZ"
+      },
+      "source": [
+        "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AXNuh1hblagP"
+      },
+      "source": [
+        "import pydotplus"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MZ0MNk2emEVa"
+      },
+      "source": [
+        "!pip install six"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Zta9acN1lkYE"
+      },
+      "source": [
+        "from sklearn.tree import export_graphviz\n",
+        "from sklearn.externals.six import StringIO  \n",
+        "from IPython.display import Image  \n",
+        "import pydotplus\n",
+        "\n",
+        "dot_data = StringIO()\n",
+        "export_graphviz(better_diabetes_clf, out_file=dot_data,  \n",
+        "                filled=True, rounded=True,\n",
+        "                special_characters=True,feature_names = feature_cols,class_names=['0','1'])\n",
+        "graph = pydotplus.graph_from_dot_data(dot_data.getvalue())  \n",
+        "graph.write_png('diabetes.png')\n",
+        "Image(graph.create_png())"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D39pm18BlXn7"
+      },
+      "source": [
+        "**Can we improve the accuracy?**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1Wra5t0PmvK5"
+      },
+      "source": [
+        "# Create Decision Tree classifer object\n",
+        "better_diabetes_clf = DecisionTreeClassifier(criterion=\"entropy\", max_depth=3)\n",
+        "\n",
+        "# Train Decision Tree Classifer\n",
+        "better_diabetes_clf = better_diabetes_clf.fit(X_train,y_train)\n",
+        "\n",
+        "#Predict the response for test dataset\n",
+        "y_pred_better = better_diabetes_clf.predict(X_test)\n",
+        "\n",
+        "# Model Accuracy, how often is the classifier correct?\n",
+        "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred_better))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r9dwbInjnHzx"
+      },
+      "source": [
+        "from sklearn.externals.six import StringIO  \n",
+        "from IPython.display import Image  \n",
+        "from sklearn.tree import export_graphviz\n",
+        "import pydotplus\n",
+        "dot_data = StringIO()\n",
+        "export_graphviz(better_diabetes_clf, out_file=dot_data,  \n",
+        "                filled=True, rounded=True,\n",
+        "                special_characters=True, feature_names = feature_cols,class_names=['0','1'])\n",
+        "graph = pydotplus.graph_from_dot_data(dot_data.getvalue())  \n",
+        "graph.write_png('bettter_diabetes.png')\n",
+        "Image(graph.create_png())\n"
       ],
       "execution_count": null,
       "outputs": []
