--- a/DecisionTrees2.ipynb
+++ b/DecisionTrees2.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOWkpuX6d3C+Bdvs6zvpoT1",
+      "authorship_tag": "ABX9TyNZUqEbZVnBVqO44ZNRanLm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,6 +69,18 @@
       "source": [
         "**Decision Tree Classifier on the Iris Dataset**"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NS3nZ1FzHNga"
+      },
+      "source": [
+        "from sklearn import metrics #Import scikit-learn metrics module for accuracy calculation\n",
+        "from sklearn import tree"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
