--- a/DecisionTress3.ipynb
+++ b/DecisionTress3.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTress3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMs6NVqMoVPcPGygEtv+oVw",
+      "authorship_tag": "ABX9TyMlSZDihwhO/1XNQrHd52vH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -166,6 +166,24 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N-PbkzFbIPyF"
+      },
+      "source": [
+        "In the decision tree chart, each internal node has a decision rule that splits the data. Gini referred as Gini ratio, which measures the impurity of the node. You can say a node is pure when all of its records belong to the same class, such nodes known as the leaf node."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7vXZ1azBIS8l"
+      },
+      "source": [
+        "Here, the resultant tree is unpruned. This unpruned tree is unexplainable and not easy to understand. In the next section, let's optimize it by pruning."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "kkS4aK3ovHc8"
@@ -194,6 +212,31 @@
       },
       "source": [
         "**Can we improve the accuracy?**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "46PfZ9U5IYjq"
+      },
+      "source": [
+        "Optimizing Decision Tree Performance\n",
+        "criterion : optional (default=”gini”) or Choose attribute selection measure: This parameter allows us to use the different-different attribute selection measure. Supported criteria are “gini” for the Gini index and “entropy” for the information gain.\n",
+        "\n",
+        "splitter : string, optional (default=”best”) or Split Strategy: This parameter allows us to choose the split strategy. Supported strategies are “best” to choose the best split and “random” to choose the best random split.\n",
+        "\n",
+        "max_depth : int or None, optional (default=None) or Maximum Depth of a Tree: The maximum depth of the tree. If None, then nodes are expanded until all the leaves contain less than min_samples_split samples. The higher value of maximum depth causes overfitting, and a lower value causes underfitting\n",
+        "\n",
+        "https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uAY-emhOIqVp"
+      },
+      "source": [
+        "This pruned model is less complex, explainable, and easy to understand "
       ]
     },
     {
@@ -237,6 +280,25 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ctxqYFwZI0uT"
+      },
+      "source": [
+        "**Pros**<br>\n",
+        "- Decision trees are easy to interpret and visualize.\n",
+        "- It can easily capture Non-linear patterns.\n",
+        "It requires fewer data preprocessing from the user, for example, there is no need to normalize columns.<br>\n",
+        "- It can be used for feature engineering such as predicting missing values, suitable for variable selection.<br>\n",
+        "- The decision tree has no assumptions about distribution because of the non-parametric nature of the algorithm. (Source)<br>\n",
+        "\n",
+        "**Cons** <br>\n",
+        "- Sensitive to noisy data. It can overfit noisy data.<br>\n",
+        "- The small variation(or variance) in data can result in the different decision tree. This can be reduced by bagging and boosting algorithms.<br>\n",
+        "- Decision trees are biased with imbalance dataset, so it is recommended that balance out the dataset before creating the decision tree.<br>"
+      ]
     }
   ]
 }
